# vanity_search

./: Cargo.toml  rustfmt.toml
src/: load.rs  main.rs  search.rs
